--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <div class="info">
               <div>
                 <i class="fa fa-map-marker"></i>
-                <p>A108 Adam Street<br>New York, NY 535022</p>
+                <p>Malang</p>
               </div>
 
               <div>
