--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <a href="#hero"><img src="img/logo.png" alt="" title="" /></img></a>
+        <a href="#hero"><img src="img/as.png" alt="" title="" /></img></a>
         <!-- Uncomment below if you prefer to use a text logo -->
         <!--<h1><a href="#hero">Sanggar Nusantara</a></h1>-->
       </div>
@@ -45,10 +45,9 @@
           <li class="menu-active"><a href="#hero">Home</a></li>
           <li><a href="#about">News</a></li>
           <li><a href="#services">Shop</a></li>
-          <li><a href="#portfolio">Kategori</a></li>
           <li><a href="#team">Sanggar</a></li>
-        
           <li><a href="#contact">Contact</a></li>
+          <li><a href="#">Login</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -61,7 +60,7 @@
     <div class="hero-container">
       <h1>SANGGAR NUSANTARA</h1>
       <h2>Kami akan selalu menyediakan info tentang setiap sanggar yang ada di Indonesia</h2>
-      <a href="#about" class="btn-get-started">Get Started</a>
+      <a href="#team" class="btn-get-started">Get Started</a>
     </div>
   </section><!-- #hero -->
 
