--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
           <li><a href="#services">Shop</a></li>
           <li><a href="#team">Sanggar</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li><a href="#">Login</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -60,7 +59,7 @@
     <div class="hero-container">
       <h1>SANGGAR NUSANTARA</h1>
       <h2>Kami akan selalu menyediakan info tentang setiap sanggar yang ada di Indonesia</h2>
-      <a href="#team" class="btn-get-started">Get Started</a>
+      <a href="Login.html" class="btn-get-started">LOGIN</a>
     </div>
   </section><!-- #hero -->
 
