--- a/Login.html
+++ b/Login.html
@@ -66,7 +66,7 @@
 				<input type="text" name="username" class="form_login" placeholder="Username atau email ..">
  
 				<label class="tulisan_login">Password</label>
-				<input type="text" name="password" class="form_login" placeholder="Password ..">
+				<input type="password" name="mypassword" id="mypassword "class="form_login" placeholder="Password ..">
  
 				<input type="submit" class="tombol_login" value="LOGIN">
  
