--- a/Login.html
+++ b/Login.html
@@ -42,7 +42,7 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li class="menu-active"><a href="#hero">Home</a></li>
+          <li class="menu-active"><a href="index.html">Home</a></li>
           <li><a href="#about">News</a></li>
           <li><a href="#services">Shop</a></li>
           <li><a href="#team">Sanggar</a></li>
