--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="member">
               <div class="pic"><img src="img/1.jpg" alt=""></div>
-              <h4 style="font-family:Miranti;">AYODYA PALA</h4>
+              <a href=""><h4 style="font-family:Miranti;">AYODYA PALA</h4></a>
               <span>Sanggar Tari dan Musik</span>
               <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
@@ -95,7 +95,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="member">
               <div class="pic"><img src="img/2.jpg" alt=""></div>
-              <h4 style="font-family:Miranti;">GETAR PAKUAN</h4>
+              <a href=""><h4 style="font-family:Miranti;">GETAR PAKUAN</h4></a>
               <span>Sanggar Tari Seni dan Budaya</span>
               <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
@@ -109,7 +109,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="member">
               <div class="pic"><img src="img/3.png" alt=""></div>
-              <h4 style="font-family:Miranti;" >BHINEKA NUSANTARA</h4>
+              <a href=""><h4 style="font-family:Miranti;" >BHINEKA NUSANTARA</h4></a>
               <span>Sanggar Tari Seni dan Budaya</span>
               <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
@@ -123,7 +123,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="member">
               <div class="pic"><img src="img/4.jpg" alt=""></div>
-              <h4>SANGGAR RATNASARI</h4>
+              <a href=""><h4>SANGGAR RATNASARI</h4></a>
               <span>Sanggar Tari Seni Dan Budaya</span>
               <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
@@ -145,7 +145,7 @@
       <div class="container wow fadeInUp">
         <div class="section-header">
           <h3 class="section-title">Contact</h3>
-          <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <p class="section-description">Silahkan Kirimkan Saran dan Kritikan kalian di dalam Form kontak ini</p>
         </div>
       </div>
 
