--- a/Login.html
+++ b/Login.html
@@ -62,7 +62,7 @@
  
 			<form action="index.html" style="text-align:left">
 			
-				<label class="tulisan_login">Username</label><br>
+				<label class="tulisan_login">Username</label></br>
 				<input type="text" name="username" class="form_login" placeholder="Username atau email ..">
  
 				<label class="tulisan_login">Password</label>
@@ -70,8 +70,8 @@
  
 				<input type="submit" class="tombol_login" value="LOGIN">
  
-				<br/>
-				<br/>
+				</br>
+				</br>
 				
 				<center>
 					<a class="link" class="a" href="#">Buat Akun User</a></br>
