--- a/Login.html
+++ b/Login.html
@@ -62,10 +62,10 @@
  
 			<form action="index.html" style="text-align:left">
 			
-				<label class="tulisan_login">Username</label><br>
+				<label class="tulisan_login1">Username</label><br>
 				<input type="text" name="username" class="form_login" placeholder="Username atau email ..">
  
-				<label class="tulisan_login">Password</label>
+				<label class="tulisan_login1">Password</label>
 				<input type="password" name="mypassword" id="mypassword "class="form_login" placeholder="Password ..">
  
 				<input type="submit" class="tombol_login" value="LOGIN">
