--- a/Login.html
+++ b/Login.html
@@ -74,7 +74,8 @@
 				<br/>
 				
 				<center>
-					<a class="link" class="a" href="#">Buat Akun User</a>
+					<a class="link" class="a" href="#">Buat Akun User</a><br>
+					<a class="link" class="a" href="Form_Daftar_Penjual.html">Buat Akun Seller</a>
 				</center>
 				
 			</form>		
